fixed margin white space and change beer icon

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -258,16 +258,19 @@ hr {
 ============================ */
 
 .home-section {
-    padding-top: 110px;
-    padding-bottom: 110px;
+  padding-top: 45px;
+  padding-bottom: 110px;
 	display:block;
-    position:relative;
-    z-index:120;
+  position:relative;
+  z-index:120;
+  border-top: 1px solid #eee;
 }
 
 
 .section-heading h2 {
 	font-size: 40px;
+  margin-bottom: 0px;
+  color: black;
 }
 .section-heading i {
 	margin-bottom: 20px;
@@ -347,6 +350,7 @@ hr {
 	border-color: #000;
 	border-style: none;
 	text-shadow: -1px 0 1px #000;
+  @media(max-width: 480px) { font-size: 45px; }
 }
 
 .intro .slogan h4 {
@@ -535,7 +539,7 @@ form#contact-form input:focus,form#contact-form select:focus,form#contact-form t
 footer {
 	text-align: center;
 	padding: 50px 0 ;
-	
+  .small { margin-bottom: 0px; }
 }
 
 footer p {
